blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
  labels:
    app: nodeapp
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
      version: v1
  template:
    metadata:
      labels:
        app: nodeapp
        version: v1
    spec:
      containers:
      - name: nodeapp
        image: ghcr.io/tauqeerahmad5201/nodeapp-rollup:v1
        ports:
        - containerPort: 3000
