green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  labels:
    app: nodeapp
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
      version: v2
  template:
    metadata:
      labels:
        app: nodeapp
        version: v2
    spec:
      containers:
      - name: nodeapp
        image: ghcr.io/tauqeerahmad5201/nodeapp-rollup:v2
        ports:
        - containerPort: 3000
