blue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  type: ClusterIP
  selector:
    app: nodeapp
    version: v1
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
