green-service.yml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: ClusterIP
  selector:
    app: nodeapp
    version: v2
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
