ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 3000
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 3000
